--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
-cmake_minimum_required(VERSION 3.3)
+cmake_minimum_required(VERSION 2.2)
 project(OpenGL_Learning)
-
+ 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(SOURCE_FILES ./src/main.cpp)
 
-set(SOURCE_FILES main.cpp)
 add_executable(OpenGL_Learning ${SOURCE_FILES})
+target_link_libraries(OpenGL_Learning -lsfml-graphics -lsfml-window -lsfml-system)
