--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 2.2)
 project(OpenGL_Learning)
+
+include(./DefaultConfig.cmake)
+add_subdirectory(./src)
  
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 set(SOURCE_FILES ./src/main.cpp)
 
 add_executable(OpenGL_Learning ${SOURCE_FILES})
