--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,8 @@
 cmake_minimum_required(VERSION 2.2)
-project(OpenGL_Learning)
 
 include(./DefaultConfig.cmake)
-add_subdirectory(./src)
- 
-set(SOURCE_FILES ./src/main.cpp)
+include(./src/CMakeLists.txt)
 
-add_executable(OpenGL_Learning ${SOURCE_FILES})
-target_link_libraries(OpenGL_Learning -lsfml-graphics -lsfml-window -lsfml-system)
+message(${SOURCE_FILES})
+add_executable(${TARGET_NAME} ${SOURCE_FILES})
+target_link_libraries(${TARGET_NAME} -lsfml-graphics -lsfml-window -lsfml-system)
