--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.2)
 
-include(../DefaultConfig.cmake)
+include(DefaultConfig.cmake)
 
-set(SOURCE_FILES ./src/main.cpp)
+set(SOURCE_FILES ${PROJECT_DIR}/src/main.cpp)
