Write implementation for window class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,10 @@
 cmake_minimum_required(VERSION 2.2)
 
 include(./DefaultConfig.cmake)
-include(./src/CMakeLists.txt)
+include(./src/Src.cmake)
+include(./include/Include.cmake)
 
-message(${SOURCE_FILES})
-add_executable(${TARGET_NAME} ${SOURCE_FILES})
+include_directories(./include)
+
+add_executable(${TARGET_NAME} ${SOURCE_FILES} ${HEADER_FILES})
 target_link_libraries(${TARGET_NAME} -lsfml-graphics -lsfml-window -lsfml-system)
